etc/testing/minio-openshift.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  ports:
  - port: 9000
    name: s3
  - port: 9001
    name: console
  clusterIP: None
  selector:
    app: minio
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
  serviceName: "minio"
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: minio
        image: docker.io/minio/minio:latest
        command: ["/bin/bash"]
        # this will create a bucket called "pachyderm-test" and then launch minio
        args: ["-c", "mkdir -p /data/pachyderm-test && chmod -R 777 /data && minio server /data --console-address=0.0.0.0:9001" ]
        ports:
        - containerPort: 9000
          name: s3
        - containerPort: 9001
          name: console
        volumeMounts:
        - name: minio-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: minio-data
      labels:
        app: minio
    spec:
      accessModes: [ "ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
